--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "external-admin-ralph",
+  "name": "external-admin",
   "version": "0.0.0",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
